--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
   "author": "Edmundo Rubio",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.3",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.18.1",
     "bootstrap": "^3.3.7",
     "ejs": "^2.5.7",
+    "ejs-mate": "^2.3.0",
     "express": "^4.15.4",
+    "mongoose": "^4.11.12",
     "morgan": "^1.8.2"
   }
 }
