--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "1.0.0",
   "description": "Online Store",
   "main": "app.js",
+
+  "repository": {
+  "type": "git",
+  "url": "https://github.com/Edxael/Noveria-Store.git"
+},
+
+  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
